// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card header, rows, footer 1`] = `
.c1 {
  background-color: #FFF;
}

.c3 {
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c5 {
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c7 {
  font-size: 14px;
  padding: 8px;
}

.c2 {
  font-weight: 600;
}

.c4 {
  padding-top: 24px;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 32px;
}

.c4:last-of-type {
  border-bottom: none;
}

.c6 {
  padding: 16px 24px;
  font-weight: 600;
}

.c0 {
  border: 1px solid #DBDFE3;
  margin-bottom: 16px;
  overflow: visible;
  border-radius: 2px;
}

<div
  className="c0 c1 "
>
  <div
    className="c2 c3 "
  >
    Header
  </div>
  <div
    className="c4 c5 "
  >
    Row 1
  </div>
  <div
    className="c4 c5 "
  >
    Row 2
  </div>
  <div
    className="c6 c7 "
  >
    Footer
  </div>
</div>
`;

exports[`Storyshots Card no rows 1`] = `
.c1 {
  background-color: #FFF;
}

.c3 {
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c5 {
  font-size: 14px;
  padding: 8px;
}

.c2 {
  font-weight: 600;
}

.c4 {
  padding: 16px 24px;
  font-weight: 600;
}

.c0 {
  border: 1px solid #DBDFE3;
  margin-bottom: 16px;
  overflow: visible;
  border-radius: 2px;
}

<div
  className="c0 c1 "
>
  <div
    className="c2 c3 "
  >
    Header
  </div>
  <div
    className="c4 c5 "
  >
    Footer
  </div>
</div>
`;

exports[`Storyshots Card only rows 1`] = `
.c1 {
  background-color: #FFF;
}

.c3 {
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c2 {
  padding-top: 24px;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 32px;
}

.c2:last-of-type {
  border-bottom: none;
}

.c0 {
  border: 1px solid #DBDFE3;
  margin-bottom: 16px;
  overflow: visible;
  border-radius: 2px;
}

<div
  className="c0 c1 "
>
  <div
    className="c2 c3 "
  >
    Row 1
  </div>
  <div
    className="c2 c3 "
  >
    Row 2
  </div>
  <div
    className="c2 c3 "
  >
    Row 3
  </div>
</div>
`;

exports[`Storyshots Card with util props 1`] = `
.c1 {
  background-color: #FFF;
}

.c3 {
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom-color: #2FCDD0;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c5 {
  padding: 64px;
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c6 {
  background-color: #D6DEE9;
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c7 {
  background-color: #123466;
  color: #FFF;
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c9 {
  font-size: 14px;
  padding: 8px;
  border-left-color: #FF5745;
  border-left-width: 1px;
  border-left-style: solid;
}

.c2 {
  font-weight: 600;
}

.c4 {
  padding-top: 24px;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 32px;
}

.c4:last-of-type {
  border-bottom: none;
}

.c8 {
  padding: 16px 24px;
  font-weight: 600;
}

.c0 {
  border: 1px solid #DBDFE3;
  margin-bottom: 16px;
  overflow: visible;
  border-radius: 2px;
}

<div
  className="c0 c1 "
>
  <div
    className="c2 c3 "
  >
    Header
  </div>
  <div
    className="c4 c5 "
  >
    Row 1
  </div>
  <div
    className="c4 c6 "
  >
    Row 2
  </div>
  <div
    className="c4 c7 "
  >
    Row 3
  </div>
  <div
    className="c8 c9 "
  >
    Footer
  </div>
</div>
`;

exports[`Storyshots LoadingScreen default 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: inline-block;
  height: 64px;
  width: 64px;
  border: 2px solid #123466;
  border-top-color: rgba(18,52,102,0.15);
  border-left-color: rgba(18,52,102,0.15);
  border-radius: 50%;
  -webkit-animation: iECmZH 1s infinite linear;
  animation: iECmZH 1s infinite linear;
}

.c0 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  className="c0 c1 "
>
  <div
    className="c2 "
  />
</div>
`;

exports[`Storyshots LoadingSpinner default 1`] = `
.c0 {
  width: 50px;
}

.c1 {
  display: inline-block;
  height: 100%;
  width: 100%;
  border: 2px solid #123466;
  border-top-color: rgba(18,52,102,0.15);
  border-left-color: rgba(18,52,102,0.15);
  border-radius: 50%;
  -webkit-animation: iECmZH 1s infinite linear;
  animation: iECmZH 1s infinite linear;
}

<div
  className="c0 "
  style={
    Object {
      "height": 50,
    }
  }
>
  <div
    className="c1 "
  />
</div>
`;

exports[`Storyshots LoadingSpinner with size 1`] = `
.c2 {
  margin-bottom: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  height: 64px;
  width: 64px;
  border: 2px solid #123466;
  border-top-color: rgba(18,52,102,0.15);
  border-left-color: rgba(18,52,102,0.15);
  border-radius: 50%;
  -webkit-animation: iECmZH 1s infinite linear;
  animation: iECmZH 1s infinite linear;
}

.c1 {
  display: inline-block;
  height: 80px;
  width: 80px;
  border: 2px solid #123466;
  border-top-color: rgba(18,52,102,0.15);
  border-left-color: rgba(18,52,102,0.15);
  border-radius: 50%;
  -webkit-animation: iECmZH 1s infinite linear;
  animation: iECmZH 1s infinite linear;
}

.c4 {
  display: inline-block;
  height: 48px;
  width: 48px;
  border: 2px solid #123466;
  border-top-color: rgba(18,52,102,0.15);
  border-left-color: rgba(18,52,102,0.15);
  border-radius: 50%;
  -webkit-animation: iECmZH 1s infinite linear;
  animation: iECmZH 1s infinite linear;
}

.c5 {
  display: inline-block;
  height: 40px;
  width: 40px;
  border: 2px solid #123466;
  border-top-color: rgba(18,52,102,0.15);
  border-left-color: rgba(18,52,102,0.15);
  border-radius: 50%;
  -webkit-animation: iECmZH 1s infinite linear;
  animation: iECmZH 1s infinite linear;
}

.c6 {
  display: inline-block;
  height: 32px;
  width: 32px;
  border: 2px solid #123466;
  border-top-color: rgba(18,52,102,0.15);
  border-left-color: rgba(18,52,102,0.15);
  border-radius: 50%;
  -webkit-animation: iECmZH 1s infinite linear;
  animation: iECmZH 1s infinite linear;
}

<div
  className="c0 "
>
  <div
    className="c1 c2 "
  />
  <div
    className="c3 c2 "
  />
  <div
    className="c4 c2 "
  />
  <div
    className="c5 c2 "
  />
  <div
    className="c6 "
  />
</div>
`;

exports[`Storyshots LoadingSpinner with util props 1`] = `
.c0 {
  width: 50px;
}

.c2 {
  background-color: #D6DEE9;
  margin: 24px;
}

.c1 {
  display: inline-block;
  height: 100%;
  width: 100%;
  border: 2px solid #123466;
  border-top-color: rgba(18,52,102,0.15);
  border-left-color: rgba(18,52,102,0.15);
  border-radius: 50%;
  -webkit-animation: iECmZH 1s infinite linear;
  animation: iECmZH 1s infinite linear;
}

<div
  className="c0 "
  style={
    Object {
      "height": 50,
    }
  }
>
  <div
    className="c1 c2 "
  />
</div>
`;
